--- a/Alpha/AlphaMvc/Views/Authorization/CreateAuthorization.cshtml
+++ b/Alpha/AlphaMvc/Views/Authorization/CreateAuthorization.cshtml
@@ -89,7 +89,7 @@
                                                 <td>
                                                     <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                 </td>
-                                                <td>
+                                                <td style="padding-right: 5px;">
                                                     <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                 </td>
                                             </tr>
@@ -115,7 +115,7 @@
                                                 <td>
                                                     <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                 </td>
-                                                <td>
+                                                <td style="padding-right: 5px;">
                                                     <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                 </td>
                                             </tr>
