--- a/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                     <label>ใบเสนอราคา<span class="required">*</span></label>
-                    <input type="text" id="txtQuoNo" name="txtQuoNo" class="field-select-big" placeholder="ใบเสนอราคา" />&nbsp;<a href="#" data-toggle="modal" data-target="#quotationDialog" onclick="BrowseQuotation">
+                    <input type="text" id="txtQuoNo" name="txtQuoNo" class="field-select-big" placeholder="ใบเสนอราคา" />&nbsp;<a href="#" id="imgQuotation" data-toggle="modal" data-target="#quotationDialog" onclick="BrowseQuotation">
                         <img src="@Url.Content("~/Images/search-engine.png")" class="btnimage" />
                     </a>
                     <input type="hidden" id="hidQuoID" />
@@ -130,7 +130,7 @@
             </table>
             <ul class="form-style-1">
                 <li>
-                    <button type="button" class="btn btn-primary" onclick="Isvalidate('Update', 'BDC', @Request.Params["id"])">Save</button>
+                    <button type="button" id="btnSave" class="btn btn-primary" onclick="Isvalidate('Update', 'BDC', @Request.Params["id"])">Save</button>
                 </li>
             </ul>
         </form>
@@ -140,11 +140,14 @@
 <script type="text/javascript">
 
     $(document).ready(function () {
+        var input = window.location.href;
+        var after = input.split('?')[1]
+        var val = after.split('=');
+        var Isview = val[2];
 
         GetData(@Request.Params["id"]);
-
+        GetJobOrder(@Request.Params["id"]);
+        ControlEnable(Isview);
     });
-
-    @*$("#Update").click(function () { Update(@Request.Params["id"]); });*@
 
 </script>
