--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -91,7 +91,7 @@
 
             <li>
                 <label>ลูกค้า</label>
-                <input type="text" id="txtCustomerName" class="field-divided" placeholder="ลูกค้า/บริษัท" disabled />&nbsp;<a href="#" data-toggle="modal" data-target="#customerDialog" onclick="BrowseCustomer">
+                <input type="text" id="txtCustomerName" class="field-divided" placeholder="ลูกค้า/บริษัท" disabled />&nbsp;<a href="#" id="imgCustomer" data-toggle="modal" data-target="#customerDialog" onclick="BrowseCustomer">
                     <img src="@Url.Content("~/Images/search-engine.png")" class="btnimage" />
                 </a>
                 <input type="hidden" id="hidCustID" />
@@ -223,7 +223,7 @@
                                                         <td>
                                                             <div class="clone-1"><img id="cloneRowIncome"  class="cloneRowIncome row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                         </td>
-                                                        <td>
+                                                        <td style="padding-right: 5px;">
                                                             <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                         </td>
                                                     </tr>
@@ -258,7 +258,7 @@
                                                         <td>
                                                             <div class="clone-1"><img id="cloneRowIncome" class="cloneRowIncome row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                         </td>
-                                                        <td>
+                                                        <td style="padding-right: 5px;">
                                                             <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                         </td>
                                                     </tr>
@@ -334,7 +334,7 @@
                                                         <td>
                                                             <div class="clone-1"><img class="cloneRowExpense row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                         </td>
-                                                        <td>
+                                                        <td style="padding-right: 5px;">
                                                             <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                         </td>
                                                     </tr>
@@ -369,7 +369,7 @@
                                                         <td>
                                                             <div class="clone-1"><img class="cloneRowExpense row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                         </td>
-                                                        <td>
+                                                        <td style="padding-right: 5px;">
                                                             <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                         </td>
                                                     </tr>
@@ -631,7 +631,7 @@
                                                     <td>
                                                         <div class="clone-1"><img class="cloneRowSaleOrder row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                     </td>
-                                                    <td>
+                                                    <td style="padding-right: 5px;">
                                                         <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                     </td>
                                                 </tr>
@@ -657,7 +657,7 @@
                                                     <td>
                                                         <div class="clone-1"><img class="cloneRowSaleOrder row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                     </td>
-                                                    <td>
+                                                    <td style="padding-right: 5px;">
                                                         <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                     </td>
                                                 </tr>
@@ -682,7 +682,7 @@
                                                     <th>Inv No</th>
                                                     <th>So No.</th>
                                                     <th>จำนวนเงิน</th>
-                                                    <th colspan="2"></th>
+                                                    <th colspan="3"></th>
                                                 </tr>
                                             </thead>
                                             <tbody id="tBodyRowInvoice">
@@ -711,7 +711,7 @@
                                                     <td>
                                                         <div class="clone-1"><img class="cloneRowInvoice row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                     </td>
-                                                    <td>
+                                                    <td style="padding-right: 5px;">
                                                         <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                     </td>
                                                 </tr>
@@ -740,7 +740,7 @@
                                                     <td>
                                                         <div class="clone-1"><img class="cloneRowInvoice row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                     </td>
-                                                    <td>
+                                                    <td style="padding-right: 5px;">
                                                         <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                     </td>
                                                 </tr>
@@ -765,7 +765,7 @@
                                                     <th>Rep No.</th>
                                                     <th>Inv No.</th>
                                                     <th>จำนวนเงิน</th>
-                                                    <th colspan="2"></th>
+                                                    <th colspan="3"></th>
                                                 </tr>
                                             </thead>
                                             <tbody id="tBodyRowReceipt">
@@ -794,7 +794,7 @@
                                                     <td>
                                                         <div class="clone-1"><img class="cloneRowReceipt row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                     </td>
-                                                    <td>
+                                                    <td style="padding-right: 5px;">
                                                         <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                     </td>
                                                 </tr>
@@ -823,7 +823,7 @@
                                                     <td>
                                                         <div class="clone-1"><img class="cloneRowReceipt row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                     </td>
-                                                    <td>
+                                                    <td style="padding-right: 5px;">
                                                         <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                     </td>
                                                 </tr>
@@ -874,7 +874,7 @@
 
         <ul class="form-style-1">
             <li>
-                <button type="button" class="btn btn-primary" onclick="Isvalidate('Update', 'JobOrder', @Request.Params["id"])">Save</button>
+                <button type="button" id="btnSave"  class="btn btn-primary" onclick="Isvalidate('Update', 'JobOrder', @Request.Params["id"])">Save</button>
                 @*<a href="@Url.Action("IndexRptJobOrder", "RptJobOrder")" class="alink"><img src="@Url.Content("~/Images/addpicture.png")" class="btnimage-4" /></a>*@
             </li>
         </ul>
@@ -882,9 +882,15 @@
 }
 <script type="text/javascript">
     $(document).ready(function () {
-
+        var input = window.location.href;
+        var after = input.split('?')[1]
+        var val = after.split('=');
+        var Isview = val[2];
+        alert(Isview);
+        ControlEnable(Isview);
         GetData(@Request.Params["id"]);
-        GetJobOrderBorrow(@Request.Params["id"])
+        GetJobOrderBorrow(@Request.Params["id"]);
+        
     });
 
 </script>
