--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -79,7 +79,7 @@
                     <textarea name="field5" id="txtRemark" class="field-long field-textarea"></textarea>
                 </li>
                 <li>
-                    <button type="button" class="btn btn-primary" onclick="Isvalidate('Update', 'Products', @Request.Params["id"])">Save</button>
+                    <button type="button" id="btnSave" class="btn btn-primary" onclick="Isvalidate('Update', 'Products', @Request.Params["id"])">Save</button>
                 </li>
             </ul>
             <ul class="attachgrid">
@@ -181,9 +181,13 @@
 </div>
 <script type="text/javascript">
     $(document).ready(function () {
+        var input = window.location.href;
+        var after = input.split('?')[1]
+        var val = after.split('=');
+        var Isview = val[2];
 
         GetData(@Request.Params["id"]);
-
+        ControlEnable(Isview);
     });
 </script>
 
