--- a/Alpha/AlphaMvc/Content/calendar/fullcalendarCustom.css
+++ b/Alpha/AlphaMvc/Content/calendar/fullcalendarCustom.css
@@ -6,8 +6,19 @@
 #calendar
 {
     margin: 0 auto;
-    width: 55%;  
-    margin-top: 20px;
+    width: 45%;  
+    margin-bottom: 20px; 
+    float: left;
+}
+#calendarManPower
+{
+    margin: 0 auto;
+    width: 45%;  
+    margin-bottom: 20px; 
+    float: right;
+}
+.topicCarlendar{
+    float:left;
 }
 
 .fc {
@@ -486,9 +497,9 @@ temporary rendered events).
 
 .fc-row .fc-content-skeleton td,
 .fc-row .fc-helper-skeleton td {
-	/* see-through to the background below */
+	/* see-through to the background below */ 
     /* in case <td>s are globally styled */
-	/*background: none; 
+	/*background: none;
 	border-color: transparent;*/
 
 	/* don't put a border between events and/or the day number */
@@ -776,7 +787,8 @@ a.fc-more:hover {
 /* popover that appears when "more" link is clicked */
 
 .fc-day-grid .fc-row {
-	z-index: 1; /* make the "more" popover one higher than this */
+	z-index: 0; /* make the "more" popover one higher than this */
+    /*z-index: 1;*/
 }
 
 .fc-more-popover {
@@ -898,8 +910,8 @@ a.fc-more:hover {
 .fc-view, /* scope positioning and z-index's for everything within the view */
 .fc-view > table { /* so dragged elements can be above the view's main element */
 	position: relative;
-    z-index: 0;
-	/*z-index: 1;*/
+	z-index: inherit;
+    /*z-index: 1;*/
 }
 
 
@@ -1415,7 +1427,15 @@ be a descendant of the grid when it is being dragged.
     {
         margin: 0 auto;
         width: 100%;  
-        margin-top: 20px;
+        margin-bottom: 20px; 
+        float: left;
+    }
+    #calendarManPower
+    {
+        margin: 0 auto;
+        width: 100%;  
+        margin-bottom: 20px; 
+        float: right;
     }
   .fc-toolbar h2 {
 	    margin: 0;
