--- a/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
@@ -2,8 +2,6 @@
     ViewBag.Title = "IndexCalendarJob";
 }
 
-<h2>Calendar Job</h2>
-
 <link href="@Url.Content("~/Content/calendar/fullcalendar.css")" rel="stylesheet" type="text/css" />
 <link href="@Url.Content("~/Content/calendar/fullcalendar.print.min.css")" rel="stylesheet" media="print" type="text/css" />
 <script src="@Url.Content("~/Scripts/lib/moment.min.js")" type="text/javascript"></script>
@@ -73,6 +71,7 @@ function GetDetail(currentMonth) {
 $(document).ready(function () {
     var currentDate = new Date();
     var currentMonth = currentDate.getMonth() + 1;
+    $('#body').attr("style", "background-color: #fbfbf1; clear: both; padding-bottom: 3%;");
 
     GetDetail(currentMonth);
     $('#calendar').on('click', '.fc-next-button', function () {
@@ -96,11 +95,12 @@ $(document).ready(function () {
         font-size: 14px;
     }
 
-    #calendar {
-        /*max-width: 0 auto;
-        max-height: auto;*/
+    /*#calendar {
+        max-width: 0 auto;
+        max-height: auto;
         margin: 0 auto;
-    }
+    }*/
+
 </style>
 <div id="calendar"></div>
 
