--- a/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "IndexCMP";
 }
 
-<h2>Calendar Manpower</h2>
+@*<h2>Calendar Manpower</h2>*@
 
 <link href="@Url.Content("~/Content/calendar/fullcalendar.css")" rel="stylesheet" type="text/css" />
 <link href="@Url.Content("~/Content/calendar/fullcalendar.print.min.css")" rel="stylesheet" media="print" type="text/css" />
@@ -77,6 +77,7 @@
     $(document).ready(function () {
         var currentDate = new Date();
         var currentMonth = currentDate.getMonth() + 1;
+        $('#body').attr("style", "background-color: #fbfbf1; clear: both; padding-bottom: 3%;");
         GetDetail(currentMonth);
         $('#calendar').on('click', '.fc-next-button', function () {
             var currentMonth = $('#calendar').fullCalendar('getDate');
@@ -89,7 +90,6 @@
             GetDetail(currentMonth);
         });
     });
-
 		//$('#calendar').fullCalendar({
 		//	header: {
 		//		left: 'prev,next',
@@ -169,10 +169,10 @@
         font-size: 14px;
     }
 
-    #calendar {
+    /*#calendar {
         max-width: 0 auto;
         margin: 0 auto;
-    }
+    }*/
 </style>
 
 <div id="calendar"></div>
