--- a/Alpha/AlphaMvc/Views/Technician/ExpiredTechnician.cshtml
+++ b/Alpha/AlphaMvc/Views/Technician/ExpiredTechnician.cshtml
@@ -2,7 +2,186 @@
     ViewBag.Title = "ExpiredEmployee";
 }
 
-<h3>Expired Certificate</h3>
+<h3>Dashboard</h3>
+
+<link href="@Url.Content("~/Content/calendar/fullcalendarCustom.css")" rel="stylesheet" type="text/css" />
+<link href="@Url.Content("~/Content/calendar/fullcalendar.print.min.css")" rel="stylesheet" media="print" type="text/css" />
+<script src="@Url.Content("~/Scripts/lib/moment.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/lib/jquery.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/calendar/fullcalendar.js")" type="text/javascript"></script>
+
+<script>
+function GetDetail(currentMonth) {
+    //Set defaultDate
+    var today = new Date();
+    var dd = today.getDate();
+    var mm = today.getMonth() + 1; //January is 0!
+    var yyyy = today.getFullYear();
+    if (dd < 10) {
+        dd = '0' + dd
+    }
+    if (mm < 10) {
+        mm = '0' + mm
+    }
+    today = yyyy + '-' + mm + '-' + dd;
+
+    var dataObject = { CalendarMonth: currentMonth }
+    $.ajax(
+       {
+           url: 'http://localhost:13131/api/CalendarJobOrder',
+           type: 'GET',
+           data: dataObject,
+           datatype: 'json',
+           success: function (data) {
+               data = JSON.parse(data);
+               var event = [];
+               for (var i = 0; i < data.Table.length; i++) {
+                   var EWorking = data.Table[i].EWorking.replace('T00:00:00', 'T23:59:00');
+                   var TypeWorking = data.Table[i].TypeWorkingName.substr(0, 1);
+                   event.push({
+                       title: data.Table[i].JobNo + '(' + TypeWorking+')',
+                       url: '/JobOrder/EditJobOrder?id=' + data.Table[i].ID,
+                       start: data.Table[i].SWorking,
+                       end: EWorking
+                   });
+               }
+               $('#calendar').fullCalendar('removeEvents');
+               $('#calendar').fullCalendar('addEventSource', event);
+               $('#calendar').fullCalendar('rerenderEvents');
+
+               $('#calendar').fullCalendar({
+                   header: {
+                       left: 'prev,next',
+                       center: 'title',
+                       right: ''
+                   },
+
+                   defaultView: 'month',
+                   //navLinks: true, // can click day/week names to navigate views
+                   editable: false,
+                   eventLimit: true, // allow "more" link when too many events
+                   displayEventTime: false,
+                   events: event
+               });
+
+           },
+           error: function (msg) {
+               alert(msg);
+           }
+       });
+}
+function GetDetailManPower(currentMonth) {
+    //Set defaultDate
+    var today = new Date();
+    var dd = today.getDate();
+    var mm = today.getMonth() + 1; //January is 0!
+    var yyyy = today.getFullYear();
+    if (dd < 10) {
+        dd = '0' + dd
+    }
+    if (mm < 10) {
+        mm = '0' + mm
+    }
+    today = yyyy + '-' + mm + '-' + dd;
+
+    var dataObject = { CalendarMonth: currentMonth }
+    $.ajax(
+       {
+           url: 'http://localhost:13131/api/CalendarManPower',
+           type: 'GET',
+           async: false,
+           data: dataObject,
+           datatype: 'json',
+           success: function (data) {
+               data = JSON.parse(data);
+               var event = [];
+               for (var i = 0; i < data.Table.length; i++) {
+                   var EWorking = data.Table[i].EWorking.replace('T00:00:00', 'T23:59:00');
+                   event.push({
+                       title: data.Table[i].TechFullName + ' (' + data.Table[i].JobNo + ')',
+                       start: data.Table[i].SWorking,
+                       end: EWorking
+                       ////id: data.Table[i].ID
+                   });
+
+                   $('#calendarManPower').fullCalendar('removeEvents');
+                   $('#calendarManPower').fullCalendar('addEventSource', event);
+                   $('#calendarManPower').fullCalendar('rerenderEvents');
+               }
+
+               $('#calendarManPower').fullCalendar({
+                   async: false,
+                   header: {
+                       left: 'prev,next',
+                       center: 'title',
+                       right: ''
+                   },
+
+                   defaultView: 'month',
+                   //defaultDate: today,
+                   //navLinks: true, // can click day/week names to navigate views
+                   editable: false,
+                   eventLimit: true, // allow "more" link when too many events
+                   displayEventTime: false,
+                   events: event
+
+               });
+           },
+           error: function (msg) {
+               alert(msg);
+           }
+
+       });
+}
+
+$(document).ready(function () {
+    var currentDate = new Date();
+    var currentMonth = currentDate.getMonth() + 1;
+    $('#calendar').addClass('table-responsive');
+    //$('#calendar').attr("style", "width: 40%;  margin-bottom: 20px; float: left;");
+
+    GetDetail(currentMonth);
+    $('#calendar').on('click', '.fc-next-button', function () {
+        var currentMonth = $('#calendar').fullCalendar('getDate');
+        currentMonth = parseInt(currentMonth.format('M'));
+        GetDetail(currentMonth);
+    });
+    $('#calendar').on('click', '.fc-prev-button', function () {
+        var currentMonth = $('#calendar').fullCalendar('getDate');
+        currentMonth = parseInt(currentMonth.format('M'));
+        GetDetail(currentMonth);
+    });
+
+    //==================================================================ManPower
+    var currentDate = new Date();
+    var currentMonth = currentDate.getMonth() + 1;
+    $('#calendarManPower').addClass('table-responsive');
+    //$('#calendarManPower').attr("style", "width: 40%;  margin-bottom: 20px; float: right;");
+
+    GetDetailManPower(currentMonth);
+    $('#calendarManPower').on('click', '.fc-next-button', function () {
+        var currentMonth = $('#calendarMonthManPower').fullCalendar('getDate');
+        currentMonth = parseInt(currentMonth.format('M'));
+        GetDetailManPower(currentMonth);
+    });
+    $('#calendarManPower').on('click', '.fc-prev-button', function () {
+        var currentMonth = $('#calendarManPower').fullCalendar('getDate');
+        currentMonth = parseInt(currentMonth.format('M'));
+        GetDetailManPower(currentMonth);
+    });
+
+});
+</script>
+<style>
+    body {
+        /*margin: 40px 10px;*/
+        padding: 0;
+        font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
+        font-size: 14px;
+    }
+</style>
+<div id="calendar"></div>
+<div id="calendarManPower"></div>
 <section class="features">
     <table class="table table-striped">
         <thead class="bgthead">
