--- a/Alpha/AlphaMvc/Content/Style.css
+++ b/Alpha/AlphaMvc/Content/Style.css
@@ -1,4 +1,9 @@
-﻿ .hideANDseek
+﻿.topictable{
+        margin-top: 10px;
+    margin-left: 10px;
+    color: white;
+}
+.hideANDseek
 {
     display: grid;
 }
