--- a/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "IndexBDC";
 }
 
-<h2>BreakDownCost</h2>
+@*<h2>BreakDownCost</h2>*@
 @*<br />*@
 @* ------------------------------- grid  -------------------------------*@
 <script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>
@@ -39,14 +39,12 @@
 <table class="barattach-2">
     <tr>
         <td>
-            
-            <a href="/BDC/CreateBDC"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd "/></a>
-
-                <div class="topicattach-2">
-                <input id="chkShowAll" type="checkbox" class="chkShowAllinput" onchange="GetChecked(this)">
-                <label for="chkShowAll" class="chkShowAll">Show All</label>
-                Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
-</td>
+            <label class="topictable">BreakDownCost</label>
+            <a href="/BDC/CreateBDC"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd" /></a>
+            <input id="chkShowAll" type="checkbox" class="chkShowAllinput" onchange="GetChecked(this)">
+            <label for="chkShowAll" class="chkShowAll">Show All</label>
+            <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
+        </td>
     </tr>
 </table>
 
