--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -97,8 +97,8 @@
                                         @*<img src="~/Images/iconIncomeMaster.png" />*@
                                         <li class="menuli"><div class="submenua">@Html.ActionLink("Income", "IndexIncomeMaster", "IncomeMaster")</div></li>
                                         <li class="menuli"><div class="submenua">@Html.ActionLink("Expense", "IndexExpenseMaster", "ExpenseMaster")</div></li>
-                                        <li class="menuli"><div class="submenua">@Html.ActionLink("RoleMaster", "IndexRoleMaster", "RoleMaster")</div></li>
-                                        <li class="menuli"><div class="submenua">@Html.ActionLink("User", "IndexAuthorization", "Authorization")</div></li>
+                                        <li class="menuli"><div class="submenua">@Html.ActionLink("SecurityProfile", "IndexSecurityProfile", "SecurityProfile")</div></li>
+                                        <li class="menuli"><div class="submenua">@Html.ActionLink("User", "IndexUser", "User")</div></li>
                                     </ul>
                                 </div>
                             </div>
