--- a/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
@@ -14,7 +14,7 @@
                 <ul class="form-style">
                     <li>
                         <label>Detail<span class="required">*</span></label>
-                        <input type="text" id="txtDetail" class="field-divided text-floatleft" placeholder="Detail" />&nbsp;<button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'IncomeMaster', 0)">Save</button>
+                        <input type="text" id="txtDetail" class="field-divided text-floatleft" placeholder="Detail" />&nbsp;<button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'SecurityProfile', 0)">Save</button>
                     </li>
                 </ul>
                 <br />
