--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -471,23 +471,24 @@
                                                                 <td>
                                                                     <input id="No" type="text" value="" class="tdno" disabled />
                                                                 </td>
-                                                                <td>
-                                                                    <select>
+                                                                <td><input id="txtName" />
+                                                                    @*<select>
                                                                         <option value="1">Technician1</option>
                                                                         <option value="2">Technician2</option>
                                                                         <option value="3">Technician3</option>
                                                                         <option value="3">Technician4</option>
                                                                         <option value="3">Technician5</option>
-                                                                    </select>
+                                                                    </select>*@
                                                                 </td>
                                                                 <td>
                                                                     <input id="CardID" type="text" value="" class="text-size140 txtdisablerow" disabled />
                                                                 </td>
                                                                 <td>
-                                                                    <select class="select-size120">
+                                                                    <input id="txtEmployeeType" type="text" value="" class="text-size140 txtdisablerow" disabled />
+                                                                    @*<select class="select-size120">
                                                                         <option value="1">พนักงานประจำ</option>
                                                                         <option value="2">พนักงานชั่งคราว</option>
-                                                                    </select>
+                                                                    </select>*@
                                                                 </td>
                                                                 <td>
                                                                     <input type="text" id="datepicker4" class="text-size100" />
