--- a/Alpha/AlphaMvc/Content/LoginStyle.css
+++ b/Alpha/AlphaMvc/Content/LoginStyle.css
@@ -1,7 +1,16 @@
-﻿form {
+﻿/*#bodyLogin
+{
+
+}*/
+.lblStyle{
+    color:white;
+}
+form {
     /*border: 3px solid #f1f1f1;*/
-    border: 2px solid #298db2;
-    background-color: #fafae5;
+    /*border: 2px solid #298db2;*/
+    /*background-color: #fafae5;*/
+    border: 2px solid #7f1613;
+    background-color: #c71e1e;
     margin-top: 30px;
     margin-left: 30%;
     width: 40%;
@@ -25,14 +34,26 @@ input[type=text], input[type=password] {
     width: 91%;
 }
 button {
-    background-color: #7cd7b7;
-    color: white;
+    /*background-color: #7cd7b7;
+    color: white;*/
+    /*background-color: #de4848;
+    color: #000;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
     width: 100%;
+    font-weight: 700;*/
+    border: 1px solid #fdc9c9;
+    background-color: #de4848;
+    color: #fff;
+    padding: 14px 20px;
+    margin: 8px 0;
+    /* border: none; */
+    cursor: pointer;
+    width: 40%;
     font-weight: 700;
+    margin-left: 60%;
 }
 a {
     color: white;
@@ -45,17 +66,22 @@ a {
 }
 
 .imgcontainer {
-    text-align: center;
-    margin: 24px 0 12px 0;
+    /*text-align: center;
+    margin: 24px 0 12px 0;*/
+    text-align: right;
+    margin: 10px 10px 0px 0;
 }
 
 img.avatar {
     /*width: 40%;*/
-    border-radius: 50%;
+    /*border-radius: 50%;*/
 }
 
 .container {
-    padding: 15px;
+    padding-top: 5px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    padding-left: 15px;
 }
 
 span.psw {
