--- a/Alpha/AlphaMvc/Views/Login/IndexLogin.cshtml
+++ b/Alpha/AlphaMvc/Views/Login/IndexLogin.cshtml
@@ -9,25 +9,25 @@
 @* -------------------------------------------- form login ----------------------------------- *@
 <script src="@Url.Content("~/Scripts/CUDS/UserLogin/IndexUserLogin.js")" type="text/javascript"></script>
 <form id="dialog" >
-    
+        @*<label><b>Alpha Group</b></label>*@
         <div class="imgcontainer">
-            <img src="@Url.Content("~/images/img_avatar2.png")" alt="Avatar" class="avatar"/>
+            <img src="@Url.Content("~/images/radLogo.png")" alt="Avatar" class="avatar"/>
         </div>
 
         <div class="container">
-            <label><b>Username</b></label>
+            <label class="lblStyle"><b>Username</b></label>
             <input id="txtUserName" type="text" placeholder="UserName">
             <br />
-            <label><b>Password</b></label>
+            <label class="lblStyle"><b>Password</b></label>
             <input id="txtPassword" type="password" placeholder="Password">
             <br />
             <button type="button" value="Login" onClick="UserLogin()"/>Login
 
         </div>
 
-        <div class="container">
+        @*<div class="container">
             <button type="button" id="btnCancel" class="cancelbtn">Cancel</button>
-        </div>
+        </div>*@
     </form>
     
 @* -------------------------------------------- form login ----------------------------------- *@
