--- a/Alpha/AlphaMvc/Views/Shared/Login.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/Login.cshtml
@@ -29,7 +29,8 @@
         <div id="body">
 
             @*<div id="leftmenu">Accordion</div>*@
-            <section class="content-wrapper main-content clear-fix">     
+            @*<section class="content-wrapper main-content clear-fix">*@    
+            <section class="content-wrapper main-content clear-fix">  
                 @RenderBody()
             </section>
         </div>
