--- a/Alpha/AlphaMvc/Views/Shared/Login.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/Login.cshtml
@@ -26,7 +26,7 @@
                 </div>
             
         </header>
-        <div id="body">
+        <div id="bodyLogin">
 
             @*<div id="leftmenu">Accordion</div>*@
             @*<section class="content-wrapper main-content clear-fix">*@    
