--- a/Alpha/AlphaMvc/Content/calendar/fullcalendarCustom.css
+++ b/Alpha/AlphaMvc/Content/calendar/fullcalendarCustom.css
@@ -226,7 +226,8 @@ NOTE: use percentage font sizes or else old IE chokes
 	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
 	background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
 	background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
-	background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
+	/*background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);*/
+    background-image: linear-gradient(to bottom, #e67676, #e67676);
 	background-repeat: repeat-x;
 	border-color: #e6e6e6 #e6e6e6 #bfbfbf;
 	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
@@ -537,14 +538,16 @@ temporary rendered events).
 	font-size: .85em;
 	line-height: 1.3;
 	border-radius: 3px;
-	border: 1px solid #3a87ad; /* default BORDER color */
+	/*border: 1px solid #3a87ad;*/
+    border: 1px solid #b32b0b;
 	font-weight: normal; /* undo jqui's ui-widget-header bold */
 }
 
 .fc-event,
 .fc-event-dot {
 	/*background-color: #3a87ad;  default BACKGROUND color */
-    background-color: #6acdab;
+    /*background-color: #6acdab;*/
+    background-color: #f6c1b5;
 }
 
 /* overpower some of bootstrap's and jqui's styles on <a> tags */
