--- a/Alpha/AlphaMvc/Content/Style.css
+++ b/Alpha/AlphaMvc/Content/Style.css
@@ -760,7 +760,8 @@ select{
     position: absolute;
 }
 .bgthead{
-        background-color:#d6e9c6 !important;
+        /*background-color:#d6e9c6 !important;*/
+         background-color:#f6c1b5 !important;
  }
  @media screen and (max-width:680px) {
      .imglogon {
